# ncnn_Android_matting

./: README.md  local.properties
android/app/: build.gradle
android/app/src/main/assets/: PP-Matting-512.param  hrnet-w18.param
android/app/src/main/java/com/tencent/photo/: MainActivity.java
android/app/src/main/jni/: photo_jni.cpp
android/app/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mobilenetv2.param
app/src/main/java/com/tencent/photo/: MainActivity.java  Photo.java
app/src/main/jni/: CMakeLists.txt  photo_jni.cpp
app/src/main/res/layout/: main.xml
windows/models/: matting.param
